src/components/puzzles/styles/15puzzle.scss
@import "palette";
@import "common";

$stepTime: 200ms;

.Puzzle15 {
  .back {
    fill: $colorGrey;
  }

  .chip {

    cursor: default;
    .chip-back {
      fill: $color-danger-1;
      transition-duration: $stepTime;
      transition-property: fill;
    }
    .chip-edge {
      stroke: $color-danger-2;
      stroke-width: 10;
      fill: none;
      transition-duration: $stepTime;
      transition-property: stroke;

    }
    .chip-glow {
      stroke-width: 10;
      display: none;

    }
    .chip-numb {
      font-family: $fontFamily;
      font-size: 60px;
      //font-weight: bold;
      fill: $color-danger-3;
      text-anchor: middle;
      alignment-baseline: central;
      transition-duration: $stepTime;
      transition-property: fill;

    }

  }

  .chip.active {
    cursor: pointer;
    .chip-glow {
      display: block;
    }
  }

  .chip.correct {
    .chip-back {
      fill: $color-calm-1;

    }
    .chip-edge {
      stroke: $color-calm-2;

    }
    .chip-numb {
      fill: $color-calm-4;

    }
  }
}

